# OpenSock

./: .gitignore  .gitmodules  PERF  README.md  TODO  lines.sh  test.py
autocalibration/: .env  README.md  pyproject.toml  test_blender_setup.py  test_dataset_generation.py
autocalibration/data/models/credit-card 2/: credit-card 2.mtl  pen 3.mtl
autocalibration/data/models/cup 1/: cup 1.mtl
autocalibration/data/models/macrosd 1/: macrosd 1.mtl
autocalibration/data/models/microsd 1/: microsd 1.blend
autocalibration/data/models/pen 1/: pen 1.mtl
autocalibration/data/models/pen 2/: pen 2.mtl
autocalibration/data/models/smartphone 1/: smartphone 1.mtl
autocalibration/data/models/tape 1/: tape 1.mtl
autocalibration/src/: __init__.py  blender_render.py  convert_to_obj.py  main.py  model.py  pipeline.py  preprocess.py  scraper.py  train.py
classifier/: finetune.py
data/: autolabel.py  autolabel_sock.py  config.py  generate_aruco.py  image_tracker.py  mountTempfs.sh  stabilizer.py  trackers.py  video_tracker.py  visualise_sock.py  visualize.py
data-collection/: SPEC.txt
data-collection/api/: .env  .env.example  README.md  bufGen.sh  docker-compose.yml  exif_orient.go  go.mod  go.sum
data-collection/api/proto/opensock/dc/v1/: dc.proto
data-collection/api/src/: admin.go  api_errors.go  cleanup.go  cleanup_store.go  config.go  config_store.go  connect_handlers.go  db_store.go  exif_focal.go  http_helpers.go  main.go  migrate.go  models.go  store_iface.go  util.go
data-collection/api/src/migrations/: 0001_init.sql  0002_uploads.sql  0003_config.sql
data-collection/web/: .env  README.md  index.html  package-lock.json  package.json
data-collection/web/src/: App.tsx  api.ts  main.tsx  styles.css
data-collection/web/src/components/: Recap.tsx  Slides.tsx
data-collection/web/src/i18n/: de.json  en.json  index.ts
data-collection/web/src/pages/: Admin.tsx  Collect.tsx  Impressum.tsx  Interlaced.tsx  Privacy.tsx  Terms.tsx
data/scenenet/: download.sh
dataloader/: .clang-tidy  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TESTS.md  TODO.md  lines.sh  noxfile.py  noxfile.py2  precommit.py  pyproject.toml  pytest.ini
dataloader/scripts/: compare_reps2_until_mismatch.py  context_for_llm.py  run_tests_with_asan.sh  run_tests_with_san.sh
dataloader/src/: async_io_linux.cpp  async_io_linux.h  cnpy.cpp  compression.cpp  compression.h  data.cpp  data.h  dataio.cpp  dataio.h  dataloader.cpp  dataloader.h  dataset.cpp  dataset.h  datasource.cpp  datasource.h  image.cpp  image.h  io.cpp  io.h  library.cpp  pybind11_includes.h  resource.cpp  resource.h  stb_image_resize2.h  types.h  utils.cpp  utils.h
dataloader/src/dataAugmenter/: DataAugmentation.cpp  DataAugmentation.h  FlipAugmentation.cpp  FlipAugmentation.h  Pad.cpp  Pad.h  PadAugmentation.cpp  PadAugmentation.h  RandomCropAugmentation.cpp  RandomCropAugmentation.h  RandomResizedCrop.cpp  RandomResizedCrop.h  Resize.cpp  Resize.h  ResizeAugmentation.cpp  ResizeAugmentation.h  ResizeDataAugmenter.cpp  ResizeDataAugmenter.h  augmentation.cpp  augmentation.h
dataloader/src/dataDecoders/: CompressedDataDecoder.cpp  CompressedDataDecoder.h  DecoderRegister.cpp  DecoderRegister.h  ExrDataDecoder.cpp  ExrDataDecoder.h  JpgDataDecoder.cpp  JpgDataDecoder.h  NpyDataDecoder.cpp  NpyDataDecoder.h  PngDataDecoder.cpp  PngDataDecoder.h
dataloader/src/dataSources/: FlatDataSource.cpp  FlatDataSource.h  WebDatasetDataSource.cpp  WebDatasetDataSource.h
dataloader/src/hostAndGpuInterfaces/: CudaHostAndGpuDeviceInterface.cpp  CudaHostAndGpuDeviceInterface.h
dataloader/src/native_dataloader/: __init__.py  jax_api.py  jax_binding.py  native_api.py  pytorch_binding.py
dataloader/src/vectorisation/: AVX2Vectorisation.cpp  NoVectorisation.cpp  SSEVectorisation.cpp  vectorisation.h
dataloader/tests/: test_augmentations.py  test_basic.py  test_bindings.py  test_compression.py  test_dataloader.py  test_dataset.py  test_meta.py
frontend/: settings.gradle.kts
frontend/app/: build.gradle.kts
frontend/app/src/androidTest/java/com/opensock/android/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/opensock/android/: Instance.kt  MainActivity.kt  MainViewModel.kt
frontend/app/src/main/java/com/opensock/android/ui/theme/: Color.kt  Theme.kt  Type.kt
frontend/app/src/main/res/values/: strings.xml  themes.xml
frontend/app/src/test/java/com/opensock/android/: ExampleUnitTest.kt
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
src/: backend.py  colormap.py  pipeline.py  test.py
src/autolabel/: autolabel.py  autolabel_sock.py  calibrate.py  calibration.py  colormap.py  config.py  generate_aruco.py  generate_checkerboard.py  multiframe_processor.py  preprocessor.py  singleframe_processor.py  timing.py  trackers.py  utils.py  video_capture.py  visualize.py
src/inference/: config.py  image_processor.py  multipart_processor.py  persistence.py
src/shared/: utils.py
src/train/: classificator.py  classifier.py  config.py  data.py  logger.py  obj_detector.py  train.py  utils.py
train/: backbone.py  config.py  data.py  logger.py  obj_detector.py  train.py  utils.py
